@@ -1,3 +1,8 @@
+2002-06-22  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* unix/tk.spec (version), README, win/configure.in, unix/configure.in: 
+	* generic/tk.h (TK_RELEASE_*, TK_PATCH_LEVEL): Bumped to beta1.
+
 2002-06-21  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* doc/text.n:          TIP #104 implementation which generalizes the
